# libCSD

./: .gitignore  Build.cpp  CMakeLists.txt  Makefile  README  StringDictionary.cpp  StringDictionary.h  StringDictionaryFMINDEX.cpp  StringDictionaryFMINDEX.h  StringDictionaryHASHHF.cpp  StringDictionaryHASHHF.h  StringDictionaryHASHRPDAC.cpp  StringDictionaryHASHRPDAC.h  StringDictionaryHASHRPDACBlocks.cpp  StringDictionaryHASHRPDACBlocks.h  StringDictionaryHASHRPF.cpp  StringDictionaryHASHRPF.h  StringDictionaryHASHUFFDAC.cpp  StringDictionaryHASHUFFDAC.h  StringDictionaryHHTFC.cpp  StringDictionaryHHTFC.h  StringDictionaryHTFC.cpp  StringDictionaryHTFC.h  StringDictionaryPFC.cpp  StringDictionaryPFC.h  StringDictionaryRPDAC.cpp  StringDictionaryRPDAC.h  StringDictionaryRPFC.cpp  StringDictionaryRPFC.h  StringDictionaryRPHTFC.cpp  StringDictionaryRPHTFC.h  StringDictionaryXBW.cpp  StringDictionaryXBW.h  Test.cpp
FMIndex/: SSA.cpp  SSA.h  SuffixArray.cpp  SuffixArray.h
Hash/: Hash.cpp  Hash.h  HashBBdh.cpp  HashBBdh.h  Hashdh.h  (+6 more)
libcds/: CMakeLists.txt  Makefile
libcds/includes/: Array.h  BitSequence.h  BitSequence375.h  BitSequenceBuilder.h  BitSequenceBuilder375.h  BitSequenceBuilderDArray.h  BitSequenceBuilderRG.h  BitSequenceBuilderRRR.h  BitSequenceBuilderSDArray.h  BitSequenceDArray.h  BitSequenceRG.h  BitSequenceRRR.h  BitSequenceSDArray.h  BitString.h  BitmapsSequence.h  Coder.h  HuffmanCoder.h  LCP.h  LCP_DAC.h  LCP_DAC_VAR.h  LCP_FMN.h  LCP_PT.h  LCP_PhiSpare.h  LCP_Sad.h  LCP_naive.h  Mapper.h  MapperCont.h  MapperNone.h  NPR.h  NPR_CN.h  NPR_FMN.h  NSV.h  PSV.h  Permutation.h  PermutationBuilder.h  PermutationBuilderMRRR.h  PermutationMRRR.h  RMQ_succinct.h  RMQ_succinct_lcp.h  Sequence.h  (+34 more)
libcds/src/: Makefile
libcds/src/bitsequence/: BitSequence.cpp  BitSequence375.cpp  BitSequenceBuilderDArray.cpp  BitSequenceBuilderRG.cpp  BitSequenceBuilderRRR.cpp  BitSequenceBuilderSDArray.cpp  BitSequenceDArray.cpp  BitSequenceRG.cpp  BitSequenceRRR.cpp  BitSequenceSDArray.cpp  TableOffsetRRR.cpp  sdarraySadakane.cpp
libcds/src/coders/: HuffmanCoder.cpp  huff.cpp
libcds/src/mapper/: Mapper.cpp  MapperCont.cpp  MapperNone.cpp
libcds/src/permutation/: Permutation.cpp  PermutationBuilderMRRR.cpp  PermutationMRRR.cpp  perm.cpp
libcds/src/sequence/: BitmapsSequence.cpp  Sequence.cpp  SequenceAlphPart.cpp  SequenceBuilderAlphPart.cpp  SequenceBuilderGMR.cpp  SequenceBuilderGMRChunk.cpp  SequenceBuilderWaveletTree.cpp  SequenceBuilderWaveletTreeNoptrs.cpp  SequenceGMR.cpp  SequenceGMRChunk.cpp  WaveletTree.cpp  WaveletTreeNoptrs.cpp  wt_coder.cpp  wt_coder_binary.cpp  wt_coder_huff.cpp  wt_node.cpp  wt_node_internal.cpp  wt_node_leaf.cpp
libcds/src/static/bitsequence/: BitSequence.cpp  BitSequence.h  BitSequence375.cpp  BitSequence375.h  BitSequenceBuilder.h  BitSequenceBuilder375.cpp  BitSequenceBuilderDArray.cpp  BitSequenceBuilderDArray.h  BitSequenceBuilderRG.cpp  BitSequenceBuilderRG.h  BitSequenceBuilderRRR.cpp  BitSequenceBuilderRRR.h  BitSequenceBuilderSDArray.cpp  BitSequenceBuilderSDArray.h  BitSequenceDArray.cpp  BitSequenceDArray.h  BitSequenceRG.cpp  BitSequenceRG.h  BitSequenceRRR.cpp  BitSequenceRRR.h  BitSequenceSDArray.cpp  BitSequenceSDArray.h  TableOffsetRRR.cpp  TableOffsetRRR.h  sdarraySadakane.cpp  sdarraySadakane.h
libcds/src/static/coders/: Coder.h  HuffmanCoder.cpp  HuffmanCoder.h  huff.cpp  huff.h
libcds/src/static/mapper/: Mapper.cpp  Mapper.h  MapperCont.cpp  MapperCont.h  MapperNone.cpp  MapperNone.h
libcds/src/static/permutation/: Permutation.cpp  Permutation.h  PermutationBuilder.h  PermutationBuilderMRRR.cpp  PermutationBuilderMRRR.h  PermutationMRRR.cpp  PermutationMRRR.h  perm.cpp  perm.h
libcds/src/static/sequence/: BitmapsSequence.cpp  BitmapsSequence.h  Sequence.cpp  Sequence.h  SequenceAlphPart.cpp  SequenceAlphPart.h  SequenceBuilder.h  SequenceBuilderAlphPart.cpp  SequenceBuilderAlphPart.h  SequenceBuilderGMR.cpp  SequenceBuilderGMR.h  SequenceBuilderGMRChunk.cpp  SequenceBuilderGMRChunk.h  SequenceBuilderStr.cpp  SequenceBuilderStr.h  SequenceBuilderWaveletTree.cpp  SequenceBuilderWaveletTree.h  SequenceBuilderWaveletTreeNoptrs.cpp  SequenceBuilderWaveletTreeNoptrs.h  SequenceGMR.cpp  SequenceGMR.h  SequenceGMRChunk.cpp  SequenceGMRChunk.h  WaveletTree.cpp  WaveletTree.h  WaveletTreeNoptrs.cpp  WaveletTreeNoptrs.h  wt_coder.cpp  wt_coder.h  wt_coder_binary.cpp  wt_coder_binary.h  wt_coder_huff.cpp  wt_coder_huff.h  wt_node.cpp  wt_node.h  wt_node_internal.cpp  wt_node_internal.h  wt_node_leaf.cpp  wt_node_leaf.h
libcds/src/static/suffixtree/: LCP.cpp  LCP.h  LCP_DAC.cpp  LCP_DAC.h  LCP_DAC_VAR.cpp  LCP_DAC_VAR.h  LCP_FMN.cpp  LCP_FMN.h  LCP_PT.cpp  LCP_PT.h  LCP_PhiSpare.cpp  LCP_PhiSpare.h  LCP_Sad.cpp  LCP_Sad.h  LCP_naive.cpp  LCP_naive.h  NPR.cpp  NPR.h  NPR_CN.cpp  NPR_CN.h  NPR_FMN.cpp  NPR_FMN.h  NSV.cpp  NSV.h  PSV.cpp  PSV.h  RMQ_succinct.cpp  RMQ_succinct.h  RMQ_succinct_lcp.cpp  RMQ_succinct_lcp.h  SuffixTree.cpp  SuffixTree.h  SuffixTreeY.cpp  SuffixTreeY.h  factorization.cpp  factorization.h  factorization_var.cpp  factorization_var.h
libcds/src/static/textindex/: TextIndex.cpp  TextIndex.h  TextIndexCSA.cpp  TextIndexCSA.h  comparray4.cpp  comparray4.h  interface.h  mmap.cpp  mmap.h  qsufsort.cpp  qsufsort.h  suftest3.test.cpp
libcds/src/suffixtree/: LCP.cpp  LCP_DAC.cpp  LCP_DAC_VAR.cpp  LCP_FMN.cpp  LCP_PT.cpp  LCP_PhiSpare.cpp  LCP_Sad.cpp  LCP_naive.cpp  NPR.cpp  NPR_CN.cpp  NPR_FMN.cpp  NSV.cpp  PSV.cpp  RMQ_succinct.cpp  RMQ_succinct_lcp.cpp  SuffixTree.cpp  SuffixTreeY.cpp  factorization.cpp  factorization_var.cpp
libcds/src/textindex/: TextIndex.cpp  TextIndexCSA.cpp  comparray4.cpp  mmap.cpp  qsufsort.cpp  suftest3.test.cpp
libcds/src/utils/: Array.cpp  Array.h  BitString.cpp  BitString.h  cppUtils.cpp  cppUtils.h  libcdsBasics.h  libcdsSDArray.h  libcdsTrees.h
libcds/tests/: testArray.cpp  testBitSequence.cpp  testHuffman.cpp  testLCP.cpp  testNPR.cpp  testSequence.cpp  testSuffixTree.cpp  testTextIndex.cpp
test/: CMakeLists.txt  hrpdac_blocks_test.cpp  parallel_test.cpp  pfc_test.cpp
(+72 files in other folders)
